<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/app_bg">

    <!-- Premium Header -->
    <LinearLayout
        android:id="@+id/llHeader"
        style="@style/Widget.App.Header.Vertical">

        <TextView
            style="@style/Widget.App.HeaderText.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_list_title" />

        <TextView
            style="@style/Widget.App.HeaderSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/desc_categories"
            android:textSize="@dimen/text_size_body" />
    </LinearLayout>

    <!-- Main Content -->
    <ListView
        android:id="@+id/lvCategories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llHeader"
        android:clipToPadding="false"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:padding="@dimen/spacing_small" />

    <!-- Enhanced Add Button -->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAddCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:text="@string/btn_add_category"
        android:textColor="@color/white"
        app:backgroundTint="@color/brand_primary"
        app:icon="@android:drawable/ic_input_add"
        app:iconTint="@color/white" />

</RelativeLayout>
